--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,6 +28,8 @@
       "@typescript-eslint"
     ],
     "rules": {
+      "camelcase":"off",
+      "class-methods-use-this":"off",
       "no-use-before-define":"off",
       "react-hooks/rules-of-hooks": "error",
       "react-hooks/exhaustive-deps": "warn",
