--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,23 +1,32 @@
 {
-  "name": "@happy/server",
-  "version": "1.0.0",
-  "main": "index.js",
-  "private": "true",
-  "license": "MIT",
-  "scripts": {
-    "dev:server": "ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts"
-  },
-  "dependencies": {
-    "express": "^4.17.1"
-  },
-  "devDependencies": {
-    "@types/express": "^4.17.8",
-    "@typescript-eslint/eslint-plugin": "^4.4.1",
-    "@typescript-eslint/parser": "^4.4.1",
-    "eslint": "6.8.0",
-    "eslint-config-airbnb-base": "^14.2.0",
-    "eslint-import-resolver-typescript": "^2.3.0",
-    "eslint-plugin-import": "^2.21.2",
-    "ts-node-dev": "^1.0.0-pre.63"
-  }
+   "name": "@happy/server",
+   "version": "1.0.0",
+   "main": "index.js",
+   "private": "true",
+   "license": "MIT",
+   "scripts": {
+      "dev:server": "ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts",
+      "start": "ts-node src/index.ts",
+      "typeorm": "ts-node-dev ../../node_modules/typeorm/cli.js"
+   },
+   "dependencies": {
+      "express": "^4.17.1",
+      "reflect-metadata": "^0.1.10",
+      "sqlite3": "^5.0.0",
+      "typeorm": "0.2.28"
+   },
+   "devDependencies": {
+      "@types/express": "^4.17.8",
+      "@types/node": "^8.0.29",
+      "@typescript-eslint/eslint-plugin": "^4.4.1",
+      "@typescript-eslint/parser": "^4.4.1",
+      "body-parser": "^1.19.0",
+      "eslint": "6.8.0",
+      "eslint-config-airbnb-base": "^14.2.0",
+      "eslint-import-resolver-typescript": "^2.3.0",
+      "eslint-plugin-import": "^2.21.2",
+      "ts-node": "3.3.0",
+      "ts-node-dev": "^1.0.0-pre.63",
+      "typescript": "3.3.3333"
+   }
 }
