--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -11,12 +11,14 @@
    },
    "dependencies": {
       "express": "^4.17.1",
+      "multer": "^1.4.2",
       "reflect-metadata": "^0.1.10",
       "sqlite3": "^5.0.0",
       "typeorm": "0.2.28"
    },
    "devDependencies": {
       "@types/express": "^4.17.8",
+      "@types/multer": "^1.4.4",
       "@types/node": "^8.0.29",
       "@typescript-eslint/eslint-plugin": "^4.4.1",
       "@typescript-eslint/parser": "^4.4.1",
