--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -11,6 +11,7 @@
    },
    "dependencies": {
       "express": "^4.17.1",
+      "express-async-errors": "^3.1.1",
       "multer": "^1.4.2",
       "reflect-metadata": "^0.1.10",
       "sqlite3": "^5.0.0",
