--- a/packages/web/public/manifest.json
+++ b/packages/web/public/manifest.json
@@ -21,5 +21,5 @@
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#29B6D1",
-  "background_color": "##CEDEE5"
+  "background_color": "#CEDEE5"
 }
